PROJECT(tinynet)
SET(SRC_LIST reactor.h reactor.cc event_handle.h event_handle_srv.h event_handle_srv.cc reactor_impl.h reactor_impl_select.h reactor_impl_select.cc reactor_impl_poll.h reactor_impl_poll.cc server_impl.h server_impl.cc test.cc)
AUX_SOURCE_DIRECTORY( ./ SOURCE_DIRECTORY)	
CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
INCLUDE_DIRECTORIES( ../easy/src/base )
ADD_DEFINITIONS(-D__HAVE_SELECT -D__LINUX)
SET(CMAKE_CXX_FLAGS "$ENV{CXXFLAGS} -O0 -Wall -g -ggdb")
SET(CMAKE_CXX_FLAGS "-Wl,--no-as-needed -std=c++11 -pthread") 

ADD_EXECUTABLE(test ${SRC_LIST})